# capstone_project

./: README.md  mypy.ini  noxfile.py  pyproject.toml
src/forest_ml/: data.py  pipeline.py  train.py
tests/: test_train.py
